--- a/questions.html
+++ b/questions.html
@@ -217,7 +217,7 @@
                 Happy halentine's day, my baby! 💗🌹 I hope na-enjoy mo yung mini quiz ko. Cute no? Para lang ma-remind ka how special our moments together are.
             </p>
             <p>
-                You know baby, you're not just my uyab. You're like, my best friend, my comfort person, and myuuu. I'm so thankful kase humahaba na patience mo for me HAHAHA. I know minsan I'm acting like a child pero it just shows na im very comfy with youuu na.
+                You know baby, you're not just my uyab. You're like, my best friend, my comfort person, and myuuu. I'm so thankful kase you're becoming more patient with me HAHAHA. I know minsan I'm acting like a child pero it just shows na im very comfy with youuu na.
             </p>
             <p>
                 I always admire you baby, everything about youuu and like sobrang gandang-ganda talaga ako sayo mahal (buyaggg) and always kinikilig hahahaha.
@@ -229,7 +229,7 @@
                 Thank you for being you, for loving me kahit minsan mahirap intindihin hehe, and for making me feel like it's Valentine's everyday. 
             </p>
             <p>
-                More monthsaries to us mahal and let's keep choosing each other always. Happy valentines, babyy. I love you palagi, mahal ko💗💗 MWAAAAAA🤗🤍
+                More valentines to us mahal and let's keep choosing each other always. Happy valentines, babyy. I love you palagi, mahal ko💗💗 MWAAAAAA🤗🤍
             </p>
         </div>
         <div id="loveMessage">love,<br>your weyang</div>
