--- a/questions.html
+++ b/questions.html
@@ -220,7 +220,7 @@
                 You know baby, you're not just my uyab. You're like, my best friend, my comfort person, and myuuu. I'm so thankful kase you're becoming more patient with me HAHAHA. I know minsan I'm acting like a child pero it just shows na im very comfy with youuu na.
             </p>
             <p>
-                I always admire you baby, everything about youuu and like sobrang gandang-ganda talaga ako sayo mahal (buyaggg) and always kinikilig hahahaha.
+                I always admire you baby, everything about youuu and sobrang gandang-ganda talaga ako sayo mahal (buyaggg) and always kinikilig hahahaha.
             </p>
             <p>
                 Also, sorry if minsan ang moody ko, lablab babi. Tapos yung mga corny kong bantot jokes— but you know naman na kahit ganun, i still love you.
