--- a/questions.html
+++ b/questions.html
@@ -223,7 +223,7 @@
                 I always admire you baby, everything about youuu and sobrang gandang-ganda talaga ako sayo mahal (buyaggg) and always kinikilig hahahaha.
             </p>
             <p>
-                Also, sorry if minsan ang moody ko, lablab babi. Tapos yung mga corny kong bantot jokes— but you know naman na kahit ganun, i still love you.
+                Also, sorry if minsan ang moody ko, lablab babi. Then yung mga corny bantot jokes ko— but you know naman na kahit ganun, i still love you.
             </p>
             <p>
                 Thank you for being you, for loving me kahit minsan mahirap intindihin hehe, and for making me feel like it's Valentine's everyday. 
