--- a/questions.html
+++ b/questions.html
@@ -232,7 +232,7 @@
                 More valentines to us mahal and let's keep choosing each other always. Happy valentines, babyy. I love you palagi, mahal ko💗💗 MWAAAAAA🤗🤍
             </p>
         </div>
-        <div id="loveMessage">love,<br>your weyang</div>
+        <div id="loveMessage">Love,<br>your weyang</div>
         <button id="backToValentineFromLetter">Back</button>
     </div>
     
