--- a/questions.html
+++ b/questions.html
@@ -214,7 +214,7 @@
         <h2 class="letter-heading">To my dearest nadnad,</h2>
         <div class="letter-content">
             <p>
-                Happy halentine's day, my baby! 💗🌹 I hope na-enjoy mo yung mini quiz ko. Cute no? Para lang ma-remind ka how special our moments together are.
+                Happy valentine's day, my baby! 💗🌹 I hope na-enjoy mo yung mini quiz ko. Cute no? Para lang ma-remind ka how special our moments together are.
             </p>
             <p>
                 You know baby, you're not just my uyab. You're like, my best friend, my comfort person, and myuuu. I'm so thankful kase you're becoming more patient with me HAHAHA. I know minsan I'm acting like a child pero it just shows na im very comfy with youuu na.
